tests/miniJava/neg/004962_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , int [] java class java { public static void Main ( String [ ] java ) { { } } } ) { return 0 ; } }
